[gd_scene load_steps=2 format=3 uid="uid://b30qcbwydtd5y"]

[ext_resource type="Script" path="res://Components/Options/Options.gd" id="1_kr4tu"]

[node name="Options" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kr4tu")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.317647)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -150.0
offset_right = 125.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.188235, 1)

[node name="Keep" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 30.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
text = "继续"

[node name="Back" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 100.0
offset_right = 75.0
offset_bottom = 145.0
grow_horizontal = 2
text = "主菜单"

[node name="Exit" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 170.0
offset_right = 75.0
offset_bottom = 215.0
grow_horizontal = 2
text = "退出"

[connection signal="pressed" from="ColorRect/Keep" to="." method="OnKeepPressed"]
[connection signal="pressed" from="ColorRect/Back" to="." method="OnBackPressed"]
[connection signal="pressed" from="ColorRect/Exit" to="." method="OnExitPressed"]
